--- a/docs/write_up/Figures.tex
+++ b/docs/write_up/Figures.tex
@@ -16,10 +16,35 @@
 
 \begin{document}
 
+
+%% Figure 1 - spatial factors
+\begin{figure}
+\begin{center}
+	\includegraphics[width=0.8\linewidth]{"Figure 2 - SpatialFactorLoadingsOmega1Omega2"}
+	\label{fig:1}
+	\caption{Spatial Factor loadings for (a) the average spatial encounter
+		probability and (b) the average density,  on the first 3
+		factors. Red: positive association to the factor, Blue:
+		negative association}
+\end{center}
+\end{figure}
+
+
+%% Figure 2 - PCA style plots
+\begin{figure}
+\begin{center}
+	\includegraphics[width=\linewidth]{"Figure 3 - PCAstyle_Plots_SpatioTemp"}
+	\label{fig:2}
+	\caption{Position of each species-group on the first two loading axes from the
+	factor analysis for (a) spatio-temporal encounter probability and (b)
+	spatio-temporal density}
+\end{center}
+\end{figure}
+
 \begin{figure}
 \begin{center}
 	\includegraphics[width = \linewidth]{"Figure 1 - Omega1Omega2_Correlations_blank"}
-	\label{fig:1}
+	\label{fig:3}
 	\caption{Inter-species correlations for (a) spatial encounter
 		probability over all years and (b) spatial density.
 		Species-groups are clustered into three groups based on a
@@ -28,28 +53,6 @@
 		left blank}
 	\end{center}
 \end{figure}
-
-\begin{figure}
-\begin{center}
-	\includegraphics[width=0.8\linewidth]{"Figure 2 - SpatialFactorLoadingsOmega1Omega2"}
-	\label{fig:2}
-	\caption{Spatial Factor loadings for (a) the average spatial encounter
-		probability and (b) the average density,  on the first 3
-		factors. Red: positive association to the factor, Blue:
-		negative association}
-\end{center}
-\end{figure}
-
-\begin{figure}
-\begin{center}
-	\includegraphics[width=\linewidth]{"Figure 3 - PCAstyle_Plots_SpatioTemp"}
-	\label{fig:3}
-	\caption{Position of each species-group on the first two loading axes from the
-	factor analysis for (a) spatio-temporal encounter probability and (b)
-	spatio-temporal density}
-\end{center}
-\end{figure}
-
 
 \begin{figure}
 \begin{center}
