--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -70,47 +70,48 @@ fisheries under the EU landings obligation.
 
 \subsection{Mixed fisheries and the EU landings obligation} 
 
-Recent decades have seen efforts to reduce exploitation rates in fisheries
-start to rebuild depleted fish populations \cite{Worm2009}.  Improved
-management of fisheries has the potential to increase population sizes and
-allow increased catches, yet fisheries catch globally remains stagnant
+Recent decades have seen efforts to reduce exploitation rates in fisheries and
+rebuild depleted fish populations start to bear fruit \cite{Worm2009}.
+Improved management of fisheries has the potential to increase population sizes
+and allow increased catches, yet fisheries catch globally remains stagnant
 \cite{FAO2016}.  In light of projected increased demand for fish protein
 \cite{B??n??2016} there is an important role for well managed fisheries to play
 in supporting future food security \cite{Mcclanahan2015} and so there remains a
 need to ensure fisheries are managed efficiently to maximise productivity.
 
 A particular challenge in realising increased catches from rebuilt populations
-is maximising yields from mixed fisheries. This is because in mixed fisheries,
-the predominant type of fishery worldwide, several fish species are caught
-together in the same net or fishing operation. If managed by individual quotas
-and catches do not match available species quotas for a fishing vessel, either
-the vessel must stop fishing when the first quota is reached (known as the
-'choke' species) or there is overexploitation of the weaker species while
-fishers continue to catch more healthy species and throw back ('discard') the
-fish for which they have no quota.
+is maximising yields from mixed fisheries \cite{Branch2008, Kuriyama2016,
+	Ulrich2016}. This is because in mixed fisheries, the predominant type
+of fishery worldwide, several fish species are caught together in the same net
+or fishing operation. If managed by individual quotas and catches do not match
+available species quotas for a fishing vessel, either the vessel must stop
+fishing when the first quota is reached (known as the 'choke' species) or there
+is overexploitation of the weaker species while fishers continue to catch more
+healthy species and throw back ('discard') the fish for which they have no
+quota.
 
 The sustainability of European fisheries have been hampered by this 'mixed
-fishery problem' for decades with large-scale discarding. However, a paradigm
-shift is being introduced under the EU Common Fisheries Policy (CFP) reform of
-2012 \cite{EuropeanParliamentandCounciloftheEuropeanUnion2013} through two
-significant management changes. First, by 2019 all fish that are caught are due
-to be counted against the respective stock quota; second, by 2020 all fish
-stocks must be fished so as to be able to produce their Maximum Sustainable
-Yield (MSY). The changes are expected to contribute to attainment of Good
-Environmental Status (GES) under the European Marine Strategy Framework
-Directive (MSFD; \cite{EuropeanParliament2008}) and move Europe towards an
-ecosystem based approach to fisheries management \cite{Garcia2003}. Unless
-fishers can avoid catch of unwanted species they will have to stop fishing when
-reaching their first restrictive quota. This introduces a potential significant
-cost to fishers of under-utilised quota\cite{Hoff2010a, Ulrich2016} and
-provides a strong incentive to mitigate such losses \cite{Condie2013,
-	Condie2013a}. The ability of fishers to align their catch with
-available quota depends on being able to exploit target species while avoiding
-unwanted catch. Methods by which fishers can alter their fishing patterns
-include by switching fishing method (e.g. trawling to netting), changing
-technical gear characteristics (e.g.  introducing escapement panels in nets),
-or the timing and location of fishing activity \cite{Fulton2011b,
-	vanPutten2012a}.
+fishery problem' for decades with large-scale discarding \cite{Borges2015,
+	Uhlmann2014}.  However, a paradigm shift is being introduced under the
+EU Common Fisheries Policy (CFP) reform of 2012 through two significant
+management changes \cite{EuropeanParliamentandCounciloftheEuropeanUnion2013}.
+First, by 2019 all fish that are caught are due to be counted against the
+respective stock quota; second, by 2020 all fish stocks must be fished so as to
+be able to produce their Maximum Sustainable Yield (MSY). The changes are
+expected to contribute to attainment of Good Environmental Status (GES) under
+the European Marine Strategy Framework Directive (MSFD;
+\cite{EuropeanParliament2008}) and move Europe towards an ecosystem based
+approach to fisheries management \cite{Garcia2003}. Unless fishers can avoid
+catch of unwanted species they will have to stop fishing when reaching their
+first restrictive quota. This introduces a potential significant cost to
+fishers of under-utilised quota\cite{Hoff2010a, Ulrich2016} and provides a
+strong incentive to mitigate such losses \cite{Condie2013, Condie2013a}. The
+ability of fishers to align their catch with available quota depends on being
+able to exploit target species while avoiding unwanted catch. Methods by which
+fishers can alter their fishing patterns include by switching fishing method
+(e.g. trawling to netting), changing technical gear characteristics (e.g.
+introducing escapement panels in nets), or the timing and location of fishing
+activity \cite{Fulton2011b, vanPutten2012a}.
 
 Spatio-temporal management measures (such as time-limited fishery closures)
 have been applied in the past to reduce unwanted catch with varying degrees of
@@ -123,15 +124,15 @@ and interactions among several species. Highly mixed fisheries are complex with
 spatial, technological and community interactions. The design of
 spatio-temporal management measures which aim to allow exploitation of healthy
 stocks while protecting weaker stocks requires understanding of these
-interactions in a meaningful way for management. Here, we set out a framework
-for understanding these complexities. We do this by reducing the dimensionality
-of the problem through implementation of a spatial dynamic factor analysis and
-use the framework to identify common spatio-temporal trends to describe where
+interactions on a meaningful scale for management measures. Here, we set out a
+framework for understanding these complexities. We do this by implementing a
+spatio-temporal method for reducing the dimensionality of the problem and use
+the framework to identify trends common among species groups to describe where
 spatial measures can contribute to mitigating unwanted catches in the Celtic
 Sea mixed fisheries.
  
 
-[570 words]
+[577 words]
 
 \subsection{Framework for analysing spatio-temporal mixed fisheries
 	interactions}
@@ -139,24 +140,25 @@ Sea mixed fisheries.
 We present a framework for analysing how far spatio-temporal avoidance can go
 towards mitigating imbalances in quota in mixed fisheries. We use fisheries
 independent survey data to characterise the spatio-temporal dynamics of key
-components of a fish community and employ a geostatistical Vector
+components of a fish community by employing a geostatistical Vector
 Autoregressive Spatio-temporal model (VAST). VAST includes i) a factor analysis
 decomposition to describe trends in spatio-temporal dynamics of the different
 species as a function of \textit{n} latent variables\cite{Thorson2015}. This
 allows for inference of the distribution and density of poorly sampled species
 through association with the modelled factors and identification of community
-dynamics and drivers common among species groups. ii) Separately modelled
-spatio-temporal encounter probability and catch rates to allow separate
-characterisation of the distribution of the species groups and densities upon
-encounter \cite{Thorson2015a}, iii) Gaussian Markov Random Fields (GMRFs) are
-used to capture spatial and temporal correlations within and among species for
-both encounter probability and catch rates \cite{Thorson2013}, iv) the approach
-is set in a mixed modelling framework to allow estimation of fixed effects to
-account for systematic differences driving encounter and catches, such as
-survey catch rate differences, while integrating across random effects which
-capture the spatio-temporal properties of the fish community.
+dynamics and drivers common among species groups. In addition, it ii)
+separately models spatio-temporal encounter probability and catch rates to
+allow identification of differences in associations for distribution of the
+species groups and densities upon encounter \cite{Thorson2015a}, employs iii)
+Gaussian Markov Random Fields (GMRFs) to capture spatial and temporal
+correlations within and among species groups for both encounter probability and
+catch rates \cite{Thorson2013}, and iv) the approach is set in a mixed
+modelling framework to allow estimation of fixed effects to account for
+systematic differences driving encounter and catches, such as survey catch rate
+differences, while integrating across random effects which capture the
+spatio-temporal properties of the fish community.
 
-[197 words]
+[203 words]
 
 \subsection{Dynamics of Celtic Sea fisheries}
 
@@ -197,13 +199,14 @@ average density. The first three factors account of 83.4 \% of the variance in
 encounter probability and 69.2 \% of the variance in density, respectively. A
 clear spatial pattern can been seen both for encounter probability and density,
 with a positive association with the first factor in the inshore North Easterly
-part of the Celtic Sea in into the Bristol Channel and Western English Channel,
+part of the Celtic Sea into the Bristol Channel and Western English Channel,
 moving to a negative association offshore in the south-westerly waters. On the
-second factor a North / South split can be seen for encounter probability while
-density is more driven by a positive association in the deeper westerly waters.
-The opposite is evident on the third factor, with a positive association with
-the Easterly waters for encounter probability and negative with the westerly
-waters, while density is driven by a North / South split.
+second factor a North / South split can be seen for encounter probability at
+approximately the 49$^{\circ}$ N while density is more driven by a positive
+association in the deeper westerly waters.  The opposite is evident on the
+third factor, with a positive association with the Easterly waters for
+encounter probability and negative with the westerly waters, while density is
+driven by a North / South split.
 
 The strength of the loading on the first factor was highly correlated with
 log(depth) for both encounter probability (-0.85, CI = -0.88 to -0.81; Figure
@@ -216,33 +219,42 @@ depth and habitat, while explaining 60 \% of the variance on the third factor.
 For density, the covariates explained less of the variance with 62 \%, 35 \%,
 and 31 \% for each of the factors, respectively.
 
-It is evident that depth and to a lesser extent habitat are important
-predictors of similarities and differences in species distributions and
-abundances. However,.... [context, link to other studies]
+It is clear that depth and to a lesser extent habitat are important predictors
+for the main driver of similarities and differences in distributions and
+abundances for the different species groups. The first factor correlates
+strongly with these variables, despite them not explicitly being incorporated
+in the model. The utility of these variables as predictors of species
+distributions has been identified in other marine species distribution models
+\cite{Robinson2011}; the advantage to the approach taken here is that, where such
+data is unavailable at appropriate spatial resolution, the spatial factor
+analysis can adequately characterise these influences.
 
-[316 words]
+[397 words]
 
 \subsection{Changes in spatial patterns over time, but stability in species
 	dynamics}
 
-TALK ABOUT THE FACT THAT THESE SPATIAL PATTERNS CHANGE FROM YEAR TO YEAR..THEN
-TALK ABOUT HOW THE SPECIES FACTOR LOADINGS SHOW COMMON PATTERNS
+While there are clear spatial patterns in the factors describing average
+encounter probability and density, there are inter-annual differences in factor
+loadings which show less structure (Figures S4, S5). While temperature is often
+included as a covariate in species distribution models it was found not to
+contribute to the variance in the factor loadings (Figure S6, correlations for
+both encounter probability and density $\sim$ 0).
 
-However, the first two axes of the factor loadings for the spatio-temporal
-encounter probability and densities show clear associations among species
-group. Figure 2a shows that the same factors appear to drive spatio-temporal
-distributions of megrim, anglerfish species and hake (the deeper water species,
-species grouping negatively loaded on the second axes) on the one hand and the
-roundfish and flatfish on the other. For spatio-temporal density (Figure 2b)
-cod, haddock and whiting (the roundfish species) are separated from plaice,
-sole (the flatfish) and deeper water species. As such, higher catches the other
-roundfish species group would be expected when catching one species group.
-[more explanation of significance]
+While spatio-temporal factor loadings did not show common trends, among species
+groups there were common dynamics. Figure 2a shows that the same factors appear
+to drive spatio-temporal distributions of megrim, anglerfish species and hake
+(the deeper water species, species grouping negatively loaded on the second
+axes) on the one hand and the roundfish and flatfish on the other. For
+spatio-temporal density (Figure 2b) cod, haddock and whiting (the roundfish
+species) are separated from plaice, sole (the flatfish) and deeper water
+species. As such, higher catches the other roundfish species group would be
+expected when catching one species group. This suggests that a common
+environmental driver is influencing the distributions of the species groups.  
 
-[230 words]
+[178 words]
 
-\subsection{Pearson's correlations show three distinct species-group
-	associations:} 
+\subsection{Correlations show three distinct species-group associations}
 Pearson correlation coefficients for the modelled average spatial encounter
 probability (Figure 3a) show clear strong associations between adult and
 juvenile size classes for all species (\textgreater 0.75 for all species except
@@ -251,53 +263,55 @@ common groups; Roundfish (cod, haddock, whiting) are found closely associated,
 with correlations for adult cod with adult haddock and adult whiting of 0.73
 and 0.5 respectively, while adult haddock with adult whiting was 0.63. Flatfish
 (plaice and sole) are also strongly correlated with adult plaice and sole
-having a coefficient of 0.75.  The final group are principally species found
-along the shelf edge (hake, megrim and both anglerfish species) with the megrim
+having a coefficient of 0.75.  The final group are principally species found in
+the deeper waters (hake, megrim and both anglerfish species) with the megrim
 strongly associated with the budegassa anglerfish species (0.88). Negative
 relationships were found between plaice and sole and the monkfish species
 (-0.27, -0.26 for the adult size class with budegassa adults respectively) and
 hake (-0.33, -0.37) indicating spatial separation in distributions.
 
-Pearson's correlation coefficients for the average density (Figure 3b) show
-less significant relationships then for encounter probability, but still
-evident are the strong association among the roundfish with higher catches of
-cod are associated with higher catches of haddock (0.58) and whiting (0.47), as
-well as the two anglerfish species (0.71 for piscatorius and 0.44 for
-budegassa) and hake (0.73). Similarly, plaice and sole are closely associated
-(0.31) and higher catches of one would expect to see higher catches of the
-other, but also higher catches of some juvenile size classes of roundfish
-(whiting and haddock) and anglerfish species. Negative association of juvenile
-megrim, anglerfish (budegassa) and hake with adult sole (-0.61, -0.61 and -0.47
-respectively), plaice (-0.36 and -0.35 for megrim and hake only) indicate
-generally high abundance of one can predict low abundance of the other
-successfully.
+Correlation coefficients for the average density (Figure 3b) show less
+significant relationships then for encounter probability, but still evident are
+the strong association among the roundfish with higher catches of cod are
+associated with higher catches of haddock (0.58) and whiting (0.47), as well as
+the two anglerfish species (0.71 for piscatorius and 0.44 for budegassa) and
+hake (0.73). Similarly, plaice and sole are closely associated (0.31) and
+higher catches of one would expect to see higher catches of the other, but also
+higher catches of some juvenile size classes of roundfish (whiting and haddock)
+and anglerfish species. Negative association of juvenile megrim, anglerfish
+(budegassa) and hake with adult sole (-0.61, -0.61 and -0.47 respectively),
+plaice (-0.36 and -0.35 for megrim and hake only) indicate generally high
+abundance of one can predict low abundance of the other successfully.
 
-Pearson's correlation coefficients for spatio-temporal encounter probability
-and density show similar though weaker correlations\footnote{need some evidence
-	these are weaker!!} to the average values described above (Figures S4).
-The average values are correlated with the spatio-temporal values indicating
-generally similar relationships (0.59 (0.52 - 0.66) and 0.47 (0.38 - 0.55) for
-encounter probability and density respectively) though a linear regression
-shows high variance (R\textsuperscript{2} = 0.36 and 0.22 respectively)
-indicating that the inter-year variations in the inter-species group
-correlations drive some differences in species compositions from one-year to
-the next.  This can be seen in the spatial factor loadings which show subtle
-differences in spatial patterns from one year to the next (Figures S5 and S6). 
+[[Pearson's correlation coefficients for spatio-temporal encounter probability
+and density show similar though weaker correlations to the average values
+described above (Figures S7).  The average values are correlated with the
+spatio-temporal values indicating generally similar relationships (0.59 (0.52 -
+0.66) and 0.47 (0.38 - 0.55) for encounter probability and density
+respectively) though a linear regression shows high variance
+(R\textsuperscript{2} = 0.36 and 0.22 respectively) indicating that the
+inter-year variations in the inter-species group correlations drive some
+differences in species compositions from one-year to the next.  This can be
+seen in the spatial factor loadings which show subtle differences in spatial
+patterns from one year to the next (Figures S5 and S6).]]
 
 [291 words]
 
 
 \subsection{Implications for species avoidance in mixed fisheries under the
-	landings obligation:}
-If fisheries managed by single stock quotas under the EU's landings obligation
-are to maintain productivity, decoupling catches of stronger species from weaker
-species will be crucial.  Methods to do this include changes to the selectivity
-characteristics of gear (refs) and spatio-temporal avoidance. Both are likely
-to play a role but the extent to which they can contribute to fisheries
-sustainability is unknown. While here we demonstrate the separation of three
-distinct species groupings (roundfish, flatfish and deeper water species)
-separating catches within groups is likely to be equally as important. Figure 4 shows
-the difference in spatial distribution within a group for each of the species
+	landings obligation} 
+The analysis shows the interdependence within species groups (roundfish,
+flatfish and deeper water species) which has important implications for how
+spatial avoidance can be used to support implementation of the EU's landings
+obligation. If mixed fisheries are to maximise productivity, decoupling catches
+of species between and among the groups will be key.  Methods to do this
+include changes to the selectivity characteristics of gear (e.g.
+\cite{Santos2016}) and spatio-temporal avoidance. Both are likely to play a
+role but the extent to which they can contribute to fisheries sustainability is
+unknown. While here we demonstrate the separation of three distinct species
+groupings (roundfish, flatfish and deeper water species) separating catches
+within groups is likely to be equally as important.  Figure 4 shows the
+difference in spatial distribution within a group for each of the species
 groupings for a single year (2015). 
 
 Figure 4a indicates that cod had a more North-westerly distribution than
@@ -350,7 +364,6 @@ STRUGGLING TO DEFINE WHAT IS 'LOTS' AND WHAT IS 'LITTLE' SPACE OBJECTIVELY...?
 	obligation}
 
 
-
 Real time?  Commercial data ?  Hotspots \& Notspots ??
 
 How far can spatial changes in targeting bring you towards achieving the right
@@ -395,23 +408,13 @@ commercial demersal fish in moving to the EU landing obligation.]]
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{figure}
-\begin{center}
-	\includegraphics[width = \linewidth]{Omega1Omega2_Correlations}
-	\label{fig:1}
-	\caption{Inter-species correlations for (a) spatial encounter
-		probability over all years and (b) spatial density.
-		Species-groups are clustered into three groups based on a
-		hierarchical clustering method with non-significant
-		correlations (those where the Confidence Interval spanned zero)
-		left blank}
-\end{center}
-\end{figure}
+%%%
 
+%% Figure 1 - spatial factors
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{SpatialFactorLoadingsOmega1Omega2}
-	\label{fig:2}
+	\includegraphics[width=0.8\linewidth]{"Figure 2 - SpatialFactorLoadingsOmega1Omega2"}
+	\label{fig:1}
 	\caption{Spatial Factor loadings for (a) the average spatial encounter
 		probability and (b) the average density,  on the first 3
 		factors. Red: positive association to the factor, Blue:
@@ -419,10 +422,12 @@ commercial demersal fish in moving to the EU landing obligation.]]
 \end{center}
 \end{figure}
 
+
+%% Figure 2 - PCA style plots
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{PCAstyle_Plots_Spatial_FishPics_Leg}
-	\label{fig:3}
+	\includegraphics[width=\linewidth]{"Figure 3 - PCAstyle_Plots_SpatioTemp"}
+	\label{fig:2}
 	\caption{Position of each species-group on the first two loading axes from the
 	factor analysis for (a) spatio-temporal encounter probability and (b)
 	spatio-temporal density}
@@ -431,7 +436,20 @@ commercial demersal fish in moving to the EU landing obligation.]]
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width = \linewidth]{DensityFigureswithCCRevised2}
+	\includegraphics[width = \linewidth]{"Figure 1 - Omega1Omega2_Correlations_blank"}
+	\label{fig:3}
+	\caption{Inter-species correlations for (a) spatial encounter
+		probability over all years and (b) spatial density.
+		Species-groups are clustered into three groups based on a
+		hierarchical clustering method with non-significant
+		correlations (those where the Confidence Interval spanned zero)
+		left blank}
+	\end{center}
+\end{figure}
+
+\begin{figure}
+\begin{center}
+	\includegraphics[width = \linewidth]{"Figure 4 - DensityDifferencesFigureswithCC"}
 	\label{fig:4}
 	\caption{Differences in spatial density for pairs of species and
 		expected catch rates for two different gears at three different
@@ -441,7 +459,7 @@ commercial demersal fish in moving to the EU landing obligation.]]
 
 \begin{figure}
 \begin{center}
-	\includegraphics[width=\linewidth]{TechnicalEfficiency}
+	\includegraphics[width=\linewidth]{"Figure 5 - TechnicalEfficiency"}
 	\label{fig:5}
 	\caption{Example of technical efficiency space}
 \end{center}
