--- a/docs/write_up/SupplementaryTablesandFigures.tex
+++ b/docs/write_up/SupplementaryTablesandFigures.tex
@@ -68,14 +68,12 @@
 
 \end{figure}
 
-
 \begin{figure}[!ht]
 	\label{fig:S3}
-\begin{subfigure}{0.5\textwidth}
+\begin{subfigure}{0.55\textwidth}
 \includegraphics[width = \linewidth]{"figures/Depth"}
 \end{subfigure}	
-	
-\begin{subfigure}{0.5\textwidth}
+\begin{subfigure}{0.45\textwidth}
 \includegraphics[width = \linewidth]{"figures/Substrate"}
 \end{subfigure}
 \caption{Left: Depth, Right: Substrate assigned to each spatial knot}
@@ -83,20 +81,6 @@
 \end{figure}
 
 %%%%%%%%
-
-	
-
-\begin{figure}[!ht]
-\begin{center}
-	\includegraphics[width = \linewidth]{"figures/Suppl - Epsilon1Epsilon2_Correlations_blank"}
-	\label{fig:S4}
-	\caption{Inter-species correlations for (a) spatio-temporal encounter
-		probability and b) spatio-temporal density.  Species-groups are
-		clustered into three groups based on a hierarchical clustering
-		method with non-significant correlations (those where the
-		Confidence Interval spanned zero) left blank}
-	\end{center}
-\end{figure}
 
 \begin{figure}
 \begin{center}
@@ -107,19 +91,44 @@
 	\end{center}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[!ht]
 \begin{center}
 	\includegraphics[width = 0.8\linewidth]{"figures/Suppl - SpatioTempLoadingsEpsilon2"}
-	\label{fig:S6}
+	\label{fig:S7}
 	\caption{Spatial Loadings for first three factors every five years for
-	spatio-temporal density probability}
+	spatio-temporal density}
 	\end{center}
 \end{figure}
 
-\begin{figure}
+
+\begin{figure}[!ht]
+\begin{center}
+	\includegraphics[width = 0.6\linewidth]{"figures/Suppl - TempAndFactors"}
+	\label{fig:S6}
+	\caption{Association of temperature and knots (individual lines; top)
+		with Spatio-temporal factor loadings for encounter probability
+	(middle) and density (bottom)}
+	\end{center}
+\end{figure}
+
+
+
+\begin{figure}[!ht]
+\begin{center}
+	\includegraphics[width = \linewidth]{"figures/Suppl - Epsilon1Epsilon2_Correlations_blank"}
+	\label{fig:S8}
+	\caption{Inter-species correlations for (a) spatio-temporal encounter
+		probability and b) spatio-temporal density.  Species-groups are
+		clustered into three groups based on a hierarchical clustering
+		method with non-significant correlations (those where the
+		Confidence Interval spanned zero) left blank}
+	\end{center}
+\end{figure}
+
+\begin{figure}[!ht]
 \begin{center}
 	\includegraphics[width = 0.9\linewidth]{"figures/Suppl - QEstimatesALL"}
-	\label{fig:S7}
+	\label{fig:S9}
 	\caption{Fixed effect estimates for surveys for each species-group. Note
 	all values within a species-group are relative to the CEXP survey}
 	\end{center}
@@ -128,7 +137,7 @@
 
 
 %% Tables %%
-\begin{table}
+\begin{table}[!ht]
 	\caption{List of survey codes, names and brief description}
 	\center
 	\begin{tabular}{ p{3cm} p{4cm} p{4cm} p{3cm} }
@@ -148,7 +157,7 @@
 \end{table}
 
 
-\begin{table}
+\begin{table}[!ht]
 	\caption{List of species codes, names and minimum conservation
 		reference size used to separate juvenile and adult fish}
 	\center
