--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -46,7 +46,7 @@ result in lower productivity as quota for healthier stocks remains uncaught in
 order to protect the weaker stocks; therefore decoupling exploitation of
 species caught together in mixed fisheries has become an important goal for
 fisheries sustainability.  A potential mechanism for decoupling exploitation is
-spatial management, but this has remained technically challenging due to
+spatial targeting (driven by spatial management or rights-based incentives), but this has remained technically challenging due to
 co-occurrence of species at fine spatial and temporal scales and a lack of
 understanding of how this is driven by community dynamics.  We sought to
 understanding community dynamics in the Celtic Sea, a highly mixed fishery, by
@@ -208,7 +208,7 @@ third factor, with a positive association with the Easterly waters for
 encounter probability and negative with the westerly waters, while density is
 driven by a North / South split.
 
-The strength of the loading on the first factor was highly correlated with
+The first factor [NOTE:  I edited this, and use the term "loading" to mean the coefficient multiplied by the factor when predicting density for a single species] was highly correlated with
 log(depth) for both encounter probability (-0.85, CI = -0.88 to -0.81; Figure
 S1) and density (-0.71, CI = -0.77 to -0.65; Figure S2). A random forest
 classification tree assigned 80 \% of the variance in the first factor for
