--- a/docs/write_up/Figures.tex
+++ b/docs/write_up/Figures.tex
@@ -22,7 +22,7 @@
 \begin{center}
 	\includegraphics[width=0.8\linewidth]{"Figure 2 - SpatialFactorLoadingsOmega1Omega2"}
 	\label{fig:1}
-	\caption{Spatial Factor loadings for (a) the average spatial encounter
+	\caption{Spatial Factor coefficients for (a) the average spatial encounter
 		probability and (b) the average density,  on the first 3
 		factors. Red: positive association to the factor, Blue:
 		negative association}
@@ -35,9 +35,9 @@
 \begin{center}
 	\includegraphics[width=\linewidth]{"Figure 3 - PCAstyle_Plots_SpatioTemp"}
 	\label{fig:2}
-	\caption{Position of each species-group on the first two loading axes from the
-	factor analysis for (a) spatio-temporal encounter probability and (b)
-	spatio-temporal density}
+	\caption{Position of each species-group on the first two axes from the
+		factor analysis for (a) spatio-temporal encounter probability
+		and (b) spatio-temporal density}
 \end{center}
 \end{figure}
 
@@ -71,5 +71,8 @@
 	\caption{Example of technical efficiency space}
 \end{center}
 \end{figure}
+
+
+
 
 \end{document}
