--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -46,12 +46,13 @@ result in lower productivity as quota for healthier stocks remains uncaught in
 order to protect the weaker stocks; therefore decoupling exploitation of
 species caught together in mixed fisheries has become an important goal for
 fisheries sustainability.  A potential mechanism for decoupling exploitation is
-spatial targeting (driven by spatial management or rights-based incentives), but this has remained technically challenging due to
-co-occurrence of species at fine spatial and temporal scales and a lack of
-understanding of how this is driven by community dynamics.  We sought to
-understanding community dynamics in the Celtic Sea, a highly mixed fishery, by
-applying a joint species distribution model (VAST) to the nine most important
-demersal fish species, each separated into juvenile and adult size classes.  \\
+spatial targeting (driven by spatial management or rights-based incentives),
+but this has remained technically challenging due to co-occurrence of species
+at fine spatial and temporal scales and a lack of understanding of how this is
+driven by community dynamics.  We sought to understanding community dynamics in
+the Celtic Sea, a highly mixed fishery, by applying a joint species
+distribution model (VAST) to the nine most important demersal fish species,
+each separated into juvenile and adult size classes.  \\
 
 Clear common drivers for spatial distribution patterns emerge for three species
 groups (roundfish flatfish and shelf species) and, while abundance varies from
@@ -208,16 +209,16 @@ third factor, with a positive association with the Easterly waters for
 encounter probability and negative with the westerly waters, while density is
 driven by a North / South split.
 
-The first factor [NOTE:  I edited this, and use the term "loading" to mean the coefficient multiplied by the factor when predicting density for a single species] was highly correlated with
-log(depth) for both encounter probability (-0.85, CI = -0.88 to -0.81; Figure
-S1) and density (-0.71, CI = -0.77 to -0.65; Figure S2). A random forest
-classification tree assigned 80 \% of the variance in the first factor for
-encounter probability to depth and predominant habitat type, with the majority
-(86 \%) of the variance explained by depth. The contribution of these
-covariates dropped to 25 \% on the second factor with a more even split between
-depth and habitat, while explaining 60 \% of the variance on the third factor.
-For density, the covariates explained less of the variance with 62 \%, 35 \%,
-and 31 \% for each of the factors, respectively.
+The first factor was highly correlated with log(depth) for both encounter
+probability (-0.85, CI = -0.88 to -0.81; Figure S1) and density (-0.71, CI =
+-0.77 to -0.65; Figure S2). A random forest classification tree assigned 80 \%
+of the variance in the first factor for encounter probability to depth and
+predominant habitat type, with the majority (86 \%) of the variance explained
+by depth. The contribution of these covariates dropped to 25 \% on the second
+factor with a more even split between depth and habitat, while explaining 60 \%
+of the variance on the third factor.  For density, the covariates explained
+less of the variance with 62 \%, 35 \%, and 31 \% for each of the factors,
+respectively.
 
 It is clear that depth and to a lesser extent habitat are important predictors
 for the main driver of similarities and differences in distributions and
@@ -236,20 +237,20 @@ analysis can adequately characterise these influences.
 
 While there are clear spatial patterns in the factors describing average
 encounter probability and density, there are inter-annual differences in factor
-loadings which show less structure (Figures S4, S5). While temperature is often
-included as a covariate in species distribution models it was found not to
-contribute to the variance in the factor loadings (Figure S6, correlations for
-both encounter probability and density $\sim$ 0).
+coefficients which show less structure (Figures S4, S5). While temperature is
+often included as a covariate in species distribution models it was found not
+to contribute to the variance in the factor coefficients (Figure S6,
+correlations for both encounter probability and density $\sim$ 0).
 
-While spatio-temporal factor loadings did not show common trends, among species
-groups there were common dynamics. Figure 2a shows that the same factors appear
-to drive spatio-temporal distributions of megrim, anglerfish species and hake
-(the deeper water species, species grouping negatively loaded on the second
-axes) on the one hand and the roundfish and flatfish on the other. For
-spatio-temporal density (Figure 2b) cod, haddock and whiting (the roundfish
-species) are separated from plaice, sole (the flatfish) and deeper water
-species. As such, higher catches the other roundfish species group would be
-expected when catching one species group. This suggests that a common
+While spatio-temporal factor coefficients did not show common trends, among
+species groups there were common dynamics. Figure 2a shows that the same
+factors appear to drive spatio-temporal distributions of megrim, anglerfish
+species and hake (the deeper water species, species grouping negatively
+associated with the second axes) on the one hand and the roundfish and flatfish
+on the other. For spatio-temporal density (Figure 2b) cod, haddock and whiting
+(the roundfish species) are separated from plaice, sole (the flatfish) and
+deeper water species. As such, higher catches the other roundfish species group
+would be expected when catching one species group. This suggests that a common
 environmental driver is influencing the distributions of the species groups.  
 
 [178 words]
@@ -292,7 +293,7 @@ respectively) though a linear regression shows high variance
 (R\textsuperscript{2} = 0.36 and 0.22 respectively) indicating that the
 inter-year variations in the inter-species group correlations drive some
 differences in species compositions from one-year to the next.  This can be
-seen in the spatial factor loadings which show subtle differences in spatial
+seen in the spatial factor scores which show subtle differences in spatial
 patterns from one year to the next (Figures S5 and S6).]]
 
 [291 words]
@@ -415,7 +416,7 @@ commercial demersal fish in moving to the EU landing obligation.]]
 \begin{center}
 	\includegraphics[width=0.8\linewidth]{"Figure 2 - SpatialFactorLoadingsOmega1Omega2"}
 	\label{fig:1}
-	\caption{Spatial Factor loadings for (a) the average spatial encounter
+	\caption{Spatial Factor coefficients for (a) the average spatial encounter
 		probability and (b) the average density,  on the first 3
 		factors. Red: positive association to the factor, Blue:
 		negative association}
@@ -428,9 +429,9 @@ commercial demersal fish in moving to the EU landing obligation.]]
 \begin{center}
 	\includegraphics[width=\linewidth]{"Figure 3 - PCAstyle_Plots_SpatioTemp"}
 	\label{fig:2}
-	\caption{Position of each species-group on the first two loading axes from the
-	factor analysis for (a) spatio-temporal encounter probability and (b)
-	spatio-temporal density}
+	\caption{Position of each species-group on the first two axes from the
+		factor analysis for (a) spatio-temporal encounter probability
+		and (b) spatio-temporal density}
 \end{center}
 \end{figure}
 
